# hikari-meow

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
src/meow/: __init__.py  __main__.py  _version.py  client.py  view.py
tests_manual/: mtest_main.py
