[project]
name            = 'hikari-meow'
dynamic         = ['version']
description     = 'A components v2 handler for hikari, inspired by hikari-miru (py >3.12 only)'
readme          = "README.md"
requires-python = ">=3.12"
dependencies    = ["hikari>=2.5.0"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path    = "src/meow/_version.py"
pattern = '__version__(?:: str)? *= *\"(?P<version>[^\"]+)\"'

[tool.hatch.build.targets.wheel]
packages = ["src/meow"]
